--- a/DietTrackerBlazorServer/DietTrackerBlazorServer.csproj
+++ b/DietTrackerBlazorServer/DietTrackerBlazorServer.csproj
@@ -9,8 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="Blazorise.Bootstrap" Version="1.0.4" />
+    <PackageReference Include="Blazorise.Charts" Version="1.0.4" />
     <PackageReference Include="Blazorise.DataGrid" Version="1.0.4" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.0.4" />
+    <PackageReference Include="Blazorise.Snackbar" Version="1.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.4" />
