--- a/.gitignore
+++ b/.gitignore
@@ -456,3 +456,11 @@ $RECYCLE.BIN/
 /DietTrackerBlazorServer/bin/Debug/net6.0/DietTrackerBlazorServer.pdb
 /DietTrackerBlazorServer/obj/Debug/net6.0/DietTrackerBlazorServer.dll
 /DietTrackerBlazorServer/obj/Debug/net6.0/DietTrackerBlazorServer.pdb
+.vs/DietTrackerBlazorServer/v17/.suo
+DietTrackerBlazorServer/obj/Debug/net6.0/DietTrackerBlazorServer.assets.cache
+DietTrackerBlazorServer/obj/Debug/net6.0/DietTrackerBlazorServer.csproj.AssemblyReference.cache
+DietTrackerBlazorServer/obj/DietTrackerBlazorServer.csproj.nuget.dgspec.json
+DietTrackerBlazorServer/obj/DietTrackerBlazorServer.csproj.nuget.g.props
+DietTrackerBlazorServer/obj/DietTrackerBlazorServer.csproj.nuget.g.targets
+DietTrackerBlazorServer/obj/project.assets.json
+DietTrackerBlazorServer/obj/project.nuget.cache
