--- a/.gitignore
+++ b/.gitignore
@@ -464,3 +464,4 @@ DietTrackerBlazorServer/obj/DietTrackerBlazorServer.csproj.nuget.g.props
 DietTrackerBlazorServer/obj/DietTrackerBlazorServer.csproj.nuget.g.targets
 DietTrackerBlazorServer/obj/project.assets.json
 DietTrackerBlazorServer/obj/project.nuget.cache
+.vs/DietTrackerBlazorServer/v17/.suo
