Updated Blazorise, add files to gignore

--- a/.gitignore
+++ b/.gitignore
@@ -465,3 +465,11 @@ DietTrackerBlazorServer/obj/DietTrackerBlazorServer.csproj.nuget.g.targets
 DietTrackerBlazorServer/obj/project.assets.json
 DietTrackerBlazorServer/obj/project.nuget.cache
 .vs/DietTrackerBlazorServer/v17/.suo
+/DietTrackerBlazorServer/obj/Debug/net6.0/DietTrackerBlazorServer.assets.cache
+/DietTrackerBlazorServer/obj/Debug/net6.0/DietTrackerBlazorServer.csproj.AssemblyReference.cache
+/DietTrackerBlazorServer/obj/DietTrackerBlazorServer.csproj.nuget.dgspec.json
+/DietTrackerBlazorServer/obj/DietTrackerBlazorServer.csproj.nuget.g.props
+/DietTrackerBlazorServer/obj/DietTrackerBlazorServer.csproj.nuget.g.targets
+/DietTrackerBlazorServer/obj/project.assets.json
+/DietTrackerBlazorServer/obj/project.nuget.cache
+/.vs/DietTrackerBlazorServer/v17/.suo
