--- a/.gitignore
+++ b/.gitignore
@@ -473,3 +473,22 @@ DietTrackerBlazorServer/obj/project.nuget.cache
 /DietTrackerBlazorServer/obj/project.assets.json
 /DietTrackerBlazorServer/obj/project.nuget.cache
 /.vs/DietTrackerBlazorServer/v17/.suo
+/DietTrackerBlazorServer/bin/Debug/net6.0/Blazorise.Bootstrap.dll
+/DietTrackerBlazorServer/bin/Debug/net6.0/Blazorise.Charts.dll
+/DietTrackerBlazorServer/bin/Debug/net6.0/Blazorise.DataGrid.dll
+/DietTrackerBlazorServer/bin/Debug/net6.0/Blazorise.dll
+/DietTrackerBlazorServer/bin/Debug/net6.0/Blazorise.Icons.FontAwesome.dll
+/DietTrackerBlazorServer/bin/Debug/net6.0/Blazorise.Snackbar.dll
+/DietTrackerBlazorServer/bin/Debug/net6.0/DietTrackerBlazorServer.deps.json
+/DietTrackerBlazorServer/bin/Debug/net6.0/DietTrackerBlazorServer.staticwebassets.runtime.json
+/DietTrackerBlazorServer/bin/Debug/net6.0/Lambda2Js.dll
+/DietTrackerBlazorServer/bin/Debug/net6.0/Microsoft.Extensions.Logging.Abstractions.dll
+/DietTrackerBlazorServer/bin/Debug/net6.0/Swashbuckle.AspNetCore.Swagger.dll
+/DietTrackerBlazorServer/bin/Debug/net6.0/Swashbuckle.AspNetCore.SwaggerGen.dll
+/DietTrackerBlazorServer/bin/Debug/net6.0/Swashbuckle.AspNetCore.SwaggerUI.dll
+/DietTrackerBlazorServer/obj/Debug/net6.0/DietTrackerBlazorServer.csproj.CoreCompileInputs.cache
+/DietTrackerBlazorServer/obj/Debug/net6.0/DietTrackerBlazorServer.csproj.FileListAbsolute.txt
+/DietTrackerBlazorServer/obj/Debug/net6.0/ref/DietTrackerBlazorServer.dll
+/DietTrackerBlazorServer/obj/Debug/net6.0/refint/DietTrackerBlazorServer.dll
+/DietTrackerBlazorServer/obj/Debug/net6.0/staticwebassets.build.json
+/DietTrackerBlazorServer/obj/Debug/net6.0/staticwebassets.development.json
