--- a/.gitignore
+++ b/.gitignore
@@ -492,3 +492,7 @@ DietTrackerBlazorServer/obj/project.nuget.cache
 /DietTrackerBlazorServer/obj/Debug/net6.0/refint/DietTrackerBlazorServer.dll
 /DietTrackerBlazorServer/obj/Debug/net6.0/staticwebassets.build.json
 /DietTrackerBlazorServer/obj/Debug/net6.0/staticwebassets.development.json
+*.dll
+*.pdb
+*.cache
+*.editorconfig
