--- a/.gitignore
+++ b/.gitignore
@@ -510,3 +510,10 @@ DietTrackerBlazorServer/bin/Debug/net6.0/Model.dll
 DietTrackerBlazorServer/bin/Debug/net6.0/Model.pdb
 DietTrackerBlazorServer/obj/Debug/net6.0/DietTrackerBlazorServer.genruntimeconfig.cache
 DietTrackerBlazorServer/obj/Debug/net6.0/DietTrackerBlazorServer.MvcApplicationPartsAssemblyInfo.cs
+.vs/DietTrackerBlazorServer/DesignTimeBuild/.dtbcache.v2
+DietTrackerBlazorServer/bin/Debug/net6.0/appsettings.Development.json
+DietTrackerBlazorServer/bin/Debug/net6.0/appsettings.json
+DietTrackerBlazorServer/bin/Debug/net6.0/Model.dll
+DietTrackerBlazorServer/bin/Debug/net6.0/Model.pdb
+DietTrackerBlazorServer/obj/Debug/net6.0/DietTrackerBlazorServer.genruntimeconfig.cache
+DietTrackerBlazorServer/obj/Debug/net6.0/DietTrackerBlazorServer.MvcApplicationPartsAssemblyInfo.cs
