--- a/DietTrackerBlazorServer/appsettings.Development.json
+++ b/DietTrackerBlazorServer/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;user=root;password=password123;database=DietTrackerDB;"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Debug"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Information"
     }
   }
 }
