--- a/DietTrackerBlazorServer/appsettings.json
+++ b/DietTrackerBlazorServer/appsettings.json
@@ -1,12 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Database=DietTrackerServerDB",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=DietTrackerBlazorServer;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "server=localhost;user=root;password=password123;database=DietTrackerDB;"
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.AspNetCore": "Debug"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AllowedHosts": "*"
