--- a/DietTrackerBlazorServer/DietTrackerBlazorServer.csproj
+++ b/DietTrackerBlazorServer/DietTrackerBlazorServer.csproj
@@ -9,12 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blazorise.Bootstrap" Version="1.3.1" />
-    <PackageReference Include="Blazorise.Charts" Version="1.3.1" />
-    <PackageReference Include="Blazorise.Components" Version="1.3.1" />
-    <PackageReference Include="Blazorise.DataGrid" Version="1.3.1" />
-    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.3.1" />
-    <PackageReference Include="Blazorise.Snackbar" Version="1.3.1" />
     <PackageReference Include="Excubo.Blazor.Canvas" Version="3.2.30" />
     <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.12" />
@@ -30,6 +24,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
+    <PackageReference Include="MudBlazor" Version="6.11.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
