Fixed prod connection string

--- a/DietTrackerBlazorServer/appsettings.Production.json
+++ b/DietTrackerBlazorServer/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;User ID=dtapp;Password=dtapp;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;Database=DietTrackerServerDB;"
+    "DefaultConnection": "Server=localhost;Database=DietTrackerServerDB;Uid=dtapp;Pwd=pY@87[BC@a&Rc<Y&W(I/2579O.R.kIxa;"
   }
 }
