before scaffold identity email verif

--- a/DietTrackerBlazorServer/appsettings.Development.json
+++ b/DietTrackerBlazorServer/appsettings.Development.json
@@ -1,4 +1,13 @@
 {
+  "Mail": {
+    "Service": "SMTP",
+    "Name": "Fredy Bogisich",
+    "Username": "fredy.bogisich18@ethereal.email",
+    "Password": "Q4MqjYtjn4mXNeyQZA",
+    "Hostname": "smtp.ethereal.email",
+    "Port": 587,
+    "Security": "STARTTLS"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;user=root;password=password123;database=DietTrackerDB;"
   },
@@ -6,7 +15,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore": "Warning"
     }
   }
 }
