--- a/DietTrackerBlazorServer/DietTrackerBlazorServer.csproj
+++ b/DietTrackerBlazorServer/DietTrackerBlazorServer.csproj
@@ -9,8 +9,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CsvHelper" Version="30.0.1" />
 		<PackageReference Include="Excubo.Blazor.Canvas" Version="3.2.30" />
 		<PackageReference Include="Humanizer.Core" Version="2.14.1" />
+		<PackageReference Include="MailKit" Version="4.2.0" />
 		<PackageReference Include="MathNet.Numerics" Version="5.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.12" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.12" />
