Added EmailVerification service, which I will probably replace

--- a/DietTrackerBlazorServer/appsettings.json
+++ b/DietTrackerBlazorServer/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "VerificationEmailValidDuration": 10,
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;user=root;password=password123;database=DietTrackerDB;"
   },
